--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "license": "MIT",
   "dependencies": {
     "@discordjs/opus": "^0.5.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "ffmpeg": "0.0.4",
     "ffmpeg-static": "^4.3.0",
     "opusscript": "0.0.7",
