--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
     "opusscript": "0.0.7",
     "request": "^2.88.2",
     "ytdl-core": "^4.9.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.4.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.3"
   }
 }
